<resources>
    <string name="app_name">FruitHub</string>
    <string name="get_the_fre">
     Get The Freshest Fruit Salad Combo
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_deliver_">We deliver the best and freshest fruit salad in town. Order for a combo today!!!</string>
    <string name="start_order">Start Ordering</string>
    <string name="what_is_you">What is your firstname?</string>
    <string name="chris">  Chris</string>
    <string name="orderBasket">Order basket</string>
    <string name="search_for_">Search for fruit salad combos</string>
    <string name="recommended">Recommended Combo</string>
    <string name="welcome_chr">Welcome, Chris.</string>
    <string name="go_back">Go back</string>
    <string name="my_basket">My Basket</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="packs">2packs</string>
    <string name="letsContinue">Let\'s Continue</string>
    <string name="your_delivery">Your delivery address</string>
    <string name="th_avenue_l">10th avenue, Lekki, Lagos.</string>
    <string name="number_we_c">Number we can call</string>
    <string name="some_no">09090909090</string>
    <string name="pay_on_deli">Pay on delivery</string>
    <string name="pay_with_ca">Pay with card</string>
    <string name="card_holder">Card holder\'s name</string>
    <string name="date">Date</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="complete_or">Complete order</string>
    <string name="order_taken">Order Taken</string>
    <string name="your_order_1">Your order have been taken and is</string>
    <string name="your_order_2">being attended to</string>
    <string name="continue_sh">Continue shopping</string>
    <string name="track_order">Track order</string>
    <string name="delivery_st">Delivery Status</string>
    <string name="order_is_processing">Order is being processed</string>
    <string name="order_is_delivered">Order is being delivered</string>
    <string name="your_meal_is_on_its_way">Your meal is on it\'s way!!</string>
    <string name="quinoa_fruit_salad">Quinoa Fruit Salad</string>
    <string name="add_to_bask">Add To Basket</string>
    <string name="if_you_are_">
        If you are looking for a new fruit salad to eat today, quinoa is the perfect brunch for you. make
    </string>
    <string name="this_combo_contains">This combo contains:</string>
    <string name="all">All</string>
    <string name="saladCombo">Salad Combo</string>
    <string name="berryCombo">Berry Combo</string>
    <string name="mangoBerry">Mango Berry</string>
    <string name="honey_lime_">Honey lime combo</string>
    <string name="berry_mango">Berry mango combo</string>
    <string name="quinoa_frui">Quinoa fruit salad</string>
    <string name="tropical_fr">Tropical fruit salad</string>
    <string name="melon_fruit">Melon fruit salad</string>
</resources>