<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Authentication">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_screen_1"
        app:layout_constraintDimensionRatio="W,3:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/welcomeFruitBasket"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/authentication_image_1"
        app:layout_constraintDimensionRatio="8:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fruitBasketShadow"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fruitBasketShadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:src="@drawable/authentication_image_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageBackground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/descriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/what_is_you"
        style="@style/get_the_fre"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textDescription"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/chris"
        android:layout_margin="24dp"
        android:background="#F7F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/startOrdering"
        app:layout_constraintTop_toBottomOf="@id/imageBackground"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startOrdering"
        android:layout_width="match_parent"
        style="@style/buttonChanges"
        android:layout_height="56dp"
        android:layout_margin="24dp"
        android:text="@string/start_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>